clang/test/BSC/Positive/Ownership/RuleCheck/block/block.cbs
// RUN: %clang_cc1 %s
// expected-no-diagnostics
// RUN: %clang %s -o %t.output
// RUN: %t.output
// RUN: %clang -rewrite-bsc %s -o %t-rw.c
// RUN: %clang %t-rw.c -o %t-rw.output
// RUN: %t-rw.output

int * owned pmalloc() {
	int a = 1;
	int *owned p = (int * owned)&a;
	return p;
}

int * owned func() {
	int p = 1;
	{
		int * owned p = pmalloc();
		return p;
	}
}

int main() {
	
	return 0;
}
