clang/test/BSC/Negative/Ownership/Borrow/borrow_expr_freeze/borrow_star_freeze/borrow_star_freeze.cbs
// RUN: %clang_cc1 -ast-dump -verify %s
// expected-no-diagnostics

void test1(int *p) {}

void test_freeze_star_var1() {
    int a = 1;
    int * b = &a;
    int * borrow c = &mut *b;
    a = 2; // ok；
    b = &a;
    int m = *c;
}

void test_freeze_star_var2() {
    int a = 1;
    int * b = &a;
    int * borrow c = &mut *b;
    a = 2; // ok；
    b = &a; // ok
}

void test_freeze_star_var3() {
    int a = 1;
    int * b = &a;
    int * borrow c = &mut *b;
    a = 2; // ok；
    int m = *c;
    b = &a; // ok
}